--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -4,7 +4,7 @@
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"> -->
         <link rel="stylesheet" type="text/css" href="styles/index.css">
-        <title>Hello World</title>
+        <title>Weather App For Dogs</title>
     </head>
     <body>
         <div class="copy">
